# line-bot-connect

./: .coverage  .coveragerc  .env.example  .gitignore  .replit  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FINAL_PR_INSTRUCTIONS.md  GET_YOUR_LINE_USER_ID.md  Makefile  PRD_COMPLETION_SUMMARY.md  PR_INFO.md  README.md  README_TESTING.md  RICH_MESSAGE_TESTING.md  SECURITY_IMPROVEMENTS.md  VERSION  WEBHOOK_SETUP_GUIDE.md  app.py  auto_test_rich_message.py  capture_user_id.py  check_webhook_logs.py  code-review-comprehensive-analysis.md  create_pr.html  create_pr.sh  debug_button_data.py  debug_button_issue.py  debug_rich_message.py  debug_specific_error.py  demo_rich_message_flow.py  fix_webhook_delivery.py  get_my_user_id.py  manual_trigger_example.py  prd-azure-openai-responses-api-fix.md  prd-core-features-improvement.md  pyproject.toml  pytest.ini  quick_lineoa_test.py  quick_rich_test.py  (+33 more)
.claude/: settings.local.json
.claude/agents/: api-integration-expert.md  content-ai-specialist.md  line-app-architect.md  performance-optimizer.md  project-coordinator.md  rich-message-specialist.md  task-processor.md  test-engineer.md
.cursor/rules/: process-tasks.mdc
ai-doc/: 03-process-tasks.md
ai-docs/: process-tasks.md
attached_assets/: Pasted--Task-List-D-T-Bot-MVP-Implementation-Based-on-PRD-prd-dt-bot-mvp-md-Relevant-Files--1753348981924_1753348981926.txt  Pasted-2025-07-24-22-36-05-74-3501d42d-User-DEBUG-openai-base-client-Encountered-httpx-HTTPStatusError--1753371624858_1753371624858.txt
data/: engagement_metrics.db
deployment/: Dockerfile  README.md  docker-compose.yml
deployment/config/: nginx.conf  production.env.example  prometheus.yml
deployment/scripts/: backup.sh  deploy.sh  entrypoint.sh  init-db.sql
docs/: AZURE_OPENAI_ROUTING_GUIDE.md  DEPLOYMENT_CHECKLIST.md  FILE_SUPPORT.md
scripts/: benchmark_connection_pools.py  run_load_tests.sh  run_tests.sh
src/config/: audit_logger.py  (+9 more)
static/: style.css
tasks/: 01-create-prd-replit.md  prd-azure-openai-api-fix-replit.md  prd-file-type-support.md  prd-image-understanding.md  prd-rich-message-automation.md  prd-web-search-conversation-enhancements.md  tasks-line-bot-improvements.md  tasks-prd-azure-openai-api-fix-replit.md  tasks-prd-file-type-support.md  tasks-prd-image-understanding.md  tasks-prd-rich-message-automation.md
templates/: index.html
tests/: conftest.py
(+154 files in other folders)
