[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "line-bot-sdk>=3.17.1",
    "openai>=1.97.1",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.10",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.28.0",
    "werkzeug>=3.1.3",
    "flask-limiter>=3.12",
    "redis>=6.2.0",
    "flask-caching>=2.3.1",
    "aiohttp>=3.12.14",
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "celery>=5.5.3",
    "psutil>=6.1.1",
    "h2>=4.2.0",
    "httpx[http2]>=0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.24.0",
    "responses>=0.23.0",
]
image-formats = [
    "pillow-heif>=0.18.0", # HEIC/HEIF support for Samsung screenshots
    "pillow-avif-plugin>=0.3.0", # AVIF support for modern Android
    "pillow-jxl-plugin>=0.2.0", # JPEG XL support for cutting-edge formats
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
]
